revision on dashboard

--- a/src/prefensi.html
+++ b/src/prefensi.html
@@ -23,7 +23,7 @@
     />
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm">
-      <div class="container-fluid px-25">
+      <div class="container-fluid px-5">
         <a class="navbar-brand d-none d-md-block" href="index.html">
           <img src="assets/logo.png" alt="" />
         </a>
@@ -131,43 +131,46 @@
       <!-- right content -->
       <div class="flex-grow-1 px-5 py-3 mb-5">
         <!-- input hero -->
-        <div class="d-flex align-items-end gap-4 justify-content-between">
-          <h3>
-            Komoditas <span class="text-warning">Udang</span> Tahun 2023 Pasar
-            US
-          </h3>
-          <div class="row w-50 align-items-center justify-content-end">
-            <div class="col-4">
-              <label for="importir">Importir</label>
-              <select
-                class="form-select"
-                id="importir"
-                aria-label="Default select example"
-              >
-                <option selected>US</option>
-                <option value="1">ID</option>
-                <option value="2">UK</option>
-                <option value="3">Global</option>
-              </select>
-            </div>
-            <div class="col-3">
-              <label for="importir">Tahun</label>
-              <select
-                class="form-select"
-                id="tahun"
-                aria-label="Default select example"
-              >
-                <option selected>2024</option>
-                <option value="1">2022</option>
-                <option value="2">2023</option>
-                <option value="3">2024</option>
-              </select>
-            </div>
-          </div>
-        </div>
+
         <!-- end input hero -->
 
-        <div class="container mt-5">
+        <div class="container">
+          <div
+            class="d-flex align-items-end gap-4 mb-5 justify-content-between"
+          >
+            <h3>
+              Komoditas <span class="text-warning">Udang</span> Tahun 2023 Pasar
+              US
+            </h3>
+            <div class="row w-50 align-items-center justify-content-end">
+              <div class="col-4">
+                <label for="importir">Importir</label>
+                <select
+                  class="form-select"
+                  id="importir"
+                  aria-label="Default select example"
+                >
+                  <option selected>US</option>
+                  <option value="1">ID</option>
+                  <option value="2">UK</option>
+                  <option value="3">Global</option>
+                </select>
+              </div>
+              <div class="col-3">
+                <label for="importir">Tahun</label>
+                <select
+                  class="form-select"
+                  id="tahun"
+                  aria-label="Default select example"
+                >
+                  <option selected>2024</option>
+                  <option value="1">2022</option>
+                  <option value="2">2023</option>
+                  <option value="3">2024</option>
+                </select>
+              </div>
+            </div>
+          </div>
           <div class="card py-5 mb-5 prefensiGraph ps-4 container">
             <div class="mt-5 mx-auto">
               <div class="mx-auto">
