--- a/src/proyeksi.html
+++ b/src/proyeksi.html
@@ -129,7 +129,7 @@
       </div>
 
       <!-- right content -->
-      <div class="flex-grow-1 px-5 py-3 mb-5">
+      <div class="flex-grow-1 px-5 py-3 mb-5 w-50">
         <!-- input hero -->
         <div class="d-flex align-items-end gap-4 justify-content-between">
           <h3>
@@ -166,10 +166,9 @@
           </div>
         </div>
         <!-- end input hero -->
-
         <div class="mt-5">
           <div class="card p-3 mb-5">
-            <img src="assets/proyeksi-bulanan.png" alt="" />
+            <img src="assets/proyeksi-bulanan.png" class="" alt="" />
           </div>
           <div class="card p-3">
             <img src="assets/proyeksi-tahunan.png" alt="" />
