--- a/src/market.html
+++ b/src/market.html
@@ -129,7 +129,7 @@
       </div>
 
       <!-- right content -->
-      <div class="flex-grow-1 px-5 py-3 mb-5">
+      <div class="flex-grow-1 px-5 py-3 mb-5 w-50">
         <!-- input hero -->
         <div class="d-flex align-items-end gap-4 justify-content-between">
           <h3>
