--- a/src/artikelDashboard.html
+++ b/src/artikelDashboard.html
@@ -61,7 +61,7 @@
                   ><i class="fa-solid fa-user"></i> Download</a
                 >
               </li>
-              
+
               <li class="nav-link">
                 <a href="admin.html" class="d-block p-2"
                   ><i class="fa-solid fa-user"></i> Menejemen User</a
@@ -96,7 +96,7 @@
             </div>
           </div>
           <!-- content -->
-          <div class="px-5 mt-4 container w-100">
+          <div class="px-5 mt-4 w-100">
             <h5 class="fw-bold fs-4">Artikel</h5>
             <div class="justify-content-end text-end">
               <a
