--- a/src/roleManagement.html
+++ b/src/roleManagement.html
@@ -96,7 +96,7 @@
           </div>
           <!-- content -->
           <div class="px-5 mt-4">
-            <div class="container mt-5">
+            <div class="mt-5 w-100">
               <div
                 class="d-flex justify-content-between align-items-center mb-3"
               >
