--- a/src/uplod.html
+++ b/src/uplod.html
@@ -96,7 +96,7 @@
           </div>
           <!-- content -->
           <div class="px-5 mt-4">
-            <div class="container mt-5">
+            <div class="mt-5">
               <h5 class="fw-bold mb-4 fs-4">Uplod Data</h5>
               <ul
                 class="d-flex gap-4 items-center list-unstyled mb-3 uplodDataLink"
